test-manifests/002-nginx-ilb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ilb
  namespace: nginx
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: nginx
  type: LoadBalancer
  loadBalancerIP: 30.3.2.22
