test-manifests/003-nginx-container-native-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-container-native
  namespace: nginx
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: nginx
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-container-native
  namespace: nginx
spec:
  defaultBackend:
    service:
      name: nginx-container-native
      port:
        number: 80
