test-manifests/005-nginx-ingressgw-exposure.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-istio
  namespace: nginx
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: nginx
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: nginx
spec:
  hosts:
  - "*"
  gateways:
  - nginx/nginx
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: nginx-istio
        port:
          number: 80
